# tweedie

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
doc/: Makefile  conf.py  index.rst  make.bat  modules.rst  overview.rst  tweedie.rst
example/: Untitled.ipynb
tools/: test_get_R_tweeide.R
tweedie/: __init__.py  _version.py  tweedie_dist.py
tweedie/tests/: results.py  test_tweedie.py
