
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = tweedie/_version.py
versionfile_build = tweedie/_version.py
tag_prefix =
parentdir_prefix = tweedie-

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt

